# image-recognizer

./: .gitignore  CHANGELOG.md  LICENSE  PROJECT_SUMMARY.md  PUBLISH_CHECKLIST.md  README.md  README_zh.md  publish_to_github.sh  pyproject.toml  setup.py
docs/: API.md
examples/: example_chart.py  example_ocr.py
image_recognizer/: __init__.py  cli.py  recognizer.py
tests/: test_recognizer.py
