[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-recognizer"
version = "1.0.0"
description = "Powerful image recognition tool powered by Qwen VL multimodal AI"
readme = "README_zh.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Xie Lingxiao", email = "your-email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[project.scripts]
image-recognizer = "image_recognizer.cli:main"

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/image-recognizer"
Documentation = "https://github.com/YOUR_USERNAME/image-recognizer#readme"
Repository = "https://github.com/YOUR_USERNAME/image-recognizer.git"
Issues = "https://github.com/YOUR_USERNAME/image-recognizer/issues"
